tests/NormalTests/paczka1/fuzzy1/45045996.err
Error in line 1: rXOzrslssZ S886 17,5
Error in line 16: EzFEB4M S886 72,5
Error in line 36: EzFEB4M A385 20,7
Error in line 28: 1322x A158 64,4
